--- a/python1.html
+++ b/python1.html
@@ -38,7 +38,7 @@
 
 <h1>Python Lesson 1:</h1>
 
-<h2>diag1.py</h2>
+<h2>most basic program</h2>
 <div class="image">
     <img src="ai_1.drawio.png" alt="ai_1.drawio.png">
 </div>
@@ -50,7 +50,7 @@
 </div>
 <p class="explanation">This file is an empty template with start and end comments but no executable code.</p>
 
-<h2>diag2.py</h2>
+<h2>print name program</h2>
 <div class="image">
     <img src="ai_2.drawio.png" alt="ai_2.drawio.png">
 </div>
@@ -64,7 +64,7 @@ print("itay");
 </div>
 <p class="explanation">This file prints the name "itay" to the console.</p>
 
-<h2>diag3.py</h2>
+<h2>input name program</h2>
 <div class="image">
     <img src="ai_3.drawio.png" alt="ai_3.drawio.png">
 </div>
@@ -78,7 +78,7 @@ input("what is your name?")
 </div>
 <p class="explanation">This file prompts the user to input their name.</p>
 
-<h2>diag4.py</h2>
+<h2>basic calculation program</h2>
 <div class="image">
     <img src="ai_4.drawio.png" alt="ai_4.drawio.png">
 </div>
@@ -98,7 +98,7 @@ print(x, '*', y, '=', mul);
 </div>
 <p class="explanation">This file assigns values to two integers, multiplies them, and prints the results.</p>
 
-<h2>diag5.py</h2>
+<h2>input output program</h2>
 <div class="image">
     <img src="ai_5.drawio.png" alt="ai_5.drawio.png">
 </div>
