--- a/python2.html
+++ b/python2.html
@@ -39,7 +39,7 @@
     <div class="container">
         <h1>Pytho lesson 2:</h1>
 
-        <h2>Diagram 6</h2>
+        <h2>multiple 2 numbers</h2>
         <div class="diagram">
             <img src="ai_6.drawio.png" alt="Diagram 6">
         </div>
@@ -58,7 +58,7 @@ print("x * y =", x * y)
             </pre>
         </div>
 
-        <h2>Diagram 7</h2>
+        <h2>diff floats</h2>
         <div class="diagram">
             <img src="ai_7.drawio.png" alt="Diagram 7">
         </div>
@@ -77,7 +77,7 @@ print("x - y =", x - y)
             </pre>
         </div>
 
-        <h2>Diagram 8</h2>
+        <h2>string concat</h2>
         <div class="diagram">
             <img src="ai_8.drawio.png" alt="Diagram 8">
         </div>
@@ -96,7 +96,7 @@ print(fname + " " + lname + ".")
             </pre>
         </div>
 
-        <h2>Diagram 9</h2>
+        <h2>if-else-pass-const</h2>
         <div class="diagram">
             <img src="ai_9.drawio.png" alt="Diagram 9">
         </div>
