--- a/python2.html
+++ b/python2.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pytho lesson 2:</h1>
+        <h1>Python summary 2:</h1>
 
         <h2>multiple 2 numbers</h2>
         <div class="diagram">
