--- a/python2.html
+++ b/python2.html
@@ -96,7 +96,7 @@ print(fname + " " + lname + ".")
             </pre>
         </div>
 
-        <h2>if-else-pass-const</h2>
+        <h2>if-else</h2>
         <div class="diagram">
             <img src="ai_9.drawio.png" alt="Diagram 9">
         </div>
@@ -119,7 +119,7 @@ else:
             </pre>
         </div>
 
-        <h2>Diagram 10</h2>
+        <h2>if-else-pass-const</h2>
         <div class="diagram">
             <img src="ai_10.drawio.png" alt="Diagram 10">
         </div>
