--- a/python2.html
+++ b/python2.html
@@ -54,6 +54,8 @@ y: int = int(input("what is y?"))
 print("x * y =", x * y)
 
 # End
+
+# This program multiplies two integers input by the user and prints the result.
                 </code>
             </pre>
         </div>
@@ -73,6 +75,8 @@ y: float = float(input("what is y?"))
 print("x - y =", x - y)
 
 # End
+
+# This program subtracts the second float input by the user from the first and prints the result.
                 </code>
             </pre>
         </div>
@@ -92,6 +96,8 @@ lname: str = input("what is your last-name?")
 print(fname + " " + lname + ".")
 
 # End
+
+# This program concatenates the user's first name and last name, adding a space in between, and prints the result.
                 </code>
             </pre>
         </div>
@@ -115,6 +121,8 @@ else:
    print ("Negative or zero")
 
 ## end
+
+# This program checks if the number input by the user is positive, negative, or zero, and prints the corresponding message.
                 </code>
             </pre>
         </div>
@@ -138,6 +146,8 @@ else:
 
 ## end
 
+# This program checks if the input password matches "python1234" and prints a corresponding message.
+
 ######## Bonus:
 
 ## Tip: look at this way of checking--
@@ -148,6 +158,7 @@ if not (pwd == PASSWORD):
 else:
     print("wrong! out you go ...");
 
+# This is an alternative way to check the password, where the correct and wrong messages are swapped due to the 'not' operator.
                 </code>
             </pre>
         </div>
