--- a/python1.html
+++ b/python1.html
@@ -23,6 +23,9 @@
         .explanation {
             font-style: italic;
             margin-top: 10px;
+            background-color: #f9f9f9;
+            padding: 10px;
+            border-radius: 8px;
         }
         .image {
             margin: 20px 0;
@@ -48,7 +51,7 @@
 ## End
 </pre>
 </div>
-<p class="explanation">This file is an empty template with start and end comments but no executable code.</p>
+<div class="explanation">This file is an empty template with start and end comments but no executable code.</div>
 
 <h2>print name program</h2>
 <div class="image">
@@ -62,7 +65,7 @@ print("itay");
 ## End
 </pre>
 </div>
-<p class="explanation">This file prints the name "itay" to the console.</p>
+<div class="explanation">This program prints the name "itay" to the console.</div>
 
 <h2>input name program</h2>
 <div class="image">
@@ -76,7 +79,7 @@ input("what is your name?")
 ## End
 </pre>
 </div>
-<p class="explanation">This file prompts the user to input their name.</p>
+<div class="explanation">This program prompts the user to input their name.</div>
 
 <h2>basic calculation program</h2>
 <div class="image">
@@ -96,7 +99,7 @@ print(x, '*', y, '=', mul);
 ## End
 </pre>
 </div>
-<p class="explanation">This file assigns values to two integers, multiplies them, and prints the results.</p>
+<div class="explanation">This program assigns values to two integers, multiplies them, and prints the results.</div>
 
 <h2>input output program</h2>
 <div class="image">
@@ -115,7 +118,7 @@ print(x, '+', y, '=', x + y); # why ??
 ## End
 </pre>
 </div>
-<p class="explanation">This file prompts the user for two inputs, prints them, and attempts to print their sum. The comment "why ??" suggests there might be an issue with the addition of input strings.</p>
+<div class="explanation">This program prompts the user for two inputs, prints them, and attempts to print their sum. The comment "why ??" suggests there might be an issue with the addition of input strings, as they are concatenated rather than summed as integers.</div>
 
 </body>
 </html>
