--- a/python1.html
+++ b/python1.html
@@ -23,7 +23,7 @@
         .explanation {
             font-style: italic;
             margin-top: 10px;
-            background-color: #f9f9f9;
+            background-color: #e0f7fa; /* Light blue background color */
             padding: 10px;
             border-radius: 8px;
         }
