--- a/python3.html
+++ b/python3.html
@@ -14,7 +14,7 @@
             flex-direction: column;
             align-items: center;
         }
-        .code, .demo {
+        .code, .demo, .documentation {
             margin: 20px;
             border: 1px solid #ccc;
             padding: 10px;
@@ -28,6 +28,10 @@
             background-color: black;
             color: white;
         }
+        .documentation {
+            background-color: #f5f5dc;
+            color: #333;
+        }
         .summary {
             margin: 20px;
             padding: 10px;
@@ -39,6 +43,9 @@
         h2 {
             text-align: center;
             color: #333;
+        }
+        a {
+            color: #1e90ff;
         }
     </style>
 </head>
@@ -101,6 +108,10 @@ Point A(3.5, 4.2)
                 </code>
             </pre>
         </div>
+        <div class="documentation">
+            <h3>Documentation</h3>
+            <p>For more information, visit the official Python documentation on <a href="https://docs.python.org/3/tutorial/inputoutput.html" target="_blank">input and output</a>.</p>
+        </div>
         <div class="summary">
             <p>This program demonstrates the use of formatted string literals (f-strings) in Python for various input and output operations, including user name and age, comparing two numbers, and representing a point with x and y coordinates.</p>
         </div>
@@ -151,6 +162,10 @@ percentage: 50.000000%
                 </code>
             </pre>
         </div>
+        <div class="documentation">
+            <h3>Documentation</h3>
+            <p>For more information, visit the official Python documentation on <a href="https://docs.python.org/3/library/string.html#format-specification-mini-language" target="_blank">formatting strings</a>.</p>
+        </div>
         <div class="summary">
             <p>This program illustrates advanced formatted printing techniques in Python, including formatting floats to specific decimal places, aligning strings, and printing percentages.</p>
         </div>
@@ -194,6 +209,10 @@ enter number: 5
 Goodbye!
                 </code>
             </pre>
+        </div>
+        <div class="documentation">
+            <h3>Documentation</h3>
+            <p>For more information, visit the official Python documentation on <a href="https://docs.python.org/3/tutorial/controlflow.html#if-statements" target="_blank">if statements</a>.</p>
         </div>
         <div class="summary">
             <p>This program takes a number as input from the user and checks whether the number is positive, negative, or zero using if-elif-else statements. It also prints a farewell message.</p>
@@ -266,6 +285,10 @@ always
                 </code>
             </pre>
         </div>
+        <div class="documentation">
+            <h3>Documentation</h3>
+            <p>For more information, visit the official Python documentation on <a href="https://docs.python.org/3/reference/expressions.html#boolean-operations" target="_blank">boolean operations</a>.</p>
+        </div>
         <div class="summary">
             <p>This program demonstrates different ways to check whether a user qualifies for a program based on age and balance using various conditional statements in Python.</p>
         </div>
@@ -327,6 +350,10 @@ Tuesday
                 </code>
             </pre>
         </div>
+        <div class="documentation">
+            <h3>Documentation</h3>
+            <p>For more information, visit the official Python documentation on <a href="https://docs.python.org/3/whatsnew/3.10.html#pep-634-structural-pattern-matching" target="_blank">match-case</a>.</p>
+        </div>
         <div class="summary">
             <p>This program takes a number representing a day of the week and prints the corresponding day name using both if-elif-else statements and the match-case construct.</p>
         </div>
@@ -384,6 +411,10 @@ Q
                 </code>
             </pre>
         </div>
+        <div class="documentation">
+            <h3>Documentation</h3>
+            <p>For more information, visit the official Python documentation on <a href="https://docs.python.org/3/whatsnew/3.10.html#pep-634-structural-pattern-matching" target="_blank">match-case</a>.</p>
+        </div>
         <div class="summary">
             <p>This program maps card IDs to their corresponding card names using the match-case construct, demonstrating pattern matching with multiple cases.</p>
         </div>
@@ -418,6 +449,10 @@ Give me a number? 10
 10 is Zugi even
                 </code>
             </pre>
+        </div>
+        <div class="documentation">
+            <h3>Documentation</h3>
+            <p>For more information, visit the official Python documentation on <a href="https://docs.python.org/3/tutorial/introduction.html#numbers" target="_blank">numbers</a>.</p>
         </div>
         <div class="summary">
             <p>This program demonstrates the use of the modulo operator to determine if a number is even or odd, and prints the result accordingly.</p>
