--- a/python6.html
+++ b/python6.html
@@ -78,6 +78,9 @@ print()
 print(f"numbers[0: 3] = {numbers[0: 3]}")  # [10, 2, -1]
 print(f"numbers[:3] = {numbers[:3]}")  # [10, 2, -1]
 print(f"numbers[:] = {numbers[:]}")  # [10, 2, -1, 4]
+# numbers[3:] == from index 3 till the end of the list
+# numbers[::-1] == reverse
+# numbers[::2] == skip by 2
 
 # Updating elements
 numbers[0] = 200
