--- a/python10.html
+++ b/python10.html
@@ -89,7 +89,7 @@ items:      [('name', 'oren'), ('age', 31), ('height', 1.98), ('smoker', False),
             </pre>
         </div>
 
-        <h3>iterate Over dictionary</h3>
+        <h3>iterate over dictionary</h3>
         <div class="code">
             <pre>
                 <code>
